Changes in @NEW@:
  o Client Changes:
    * A new dependency resolution method has been added which can be turned
      on by setting resolveLevel to 2 in your conarycfg:  If updating trove 'a'
      removes a dependency needed by trove 'b', attempt to update 'b' to
      solve the dependency issue.  This will allow 'conary update conary'
      to work as expected when you have conary-build installed, for example.
    * Switched to using more of optparse's capabilities, including --help
      messages.
  o Bug Fixes:
    * Recipes that use loadRecipe('foo') and rely on conary to look upstream
      to find their branch now work correctly when committing.
    * A bug affecting systems with multiple groups referencing the same troves,
      where the groups are out of sync, has been fixed.
    * the mirror client now correctly handles duplicate items returned in
      trove lists by older servers
    * A bug that caused the mirror client to loop indefinitely when
      doing a --full-trove-sync has been fixed
    * conary rq --trove-flags will now display redirect info even if you
      do not specify --troves (bug #877)
    * dep resolution now support --flavors --full-versions output (bug #751)
    * cvc merge no longer tracebacks if files were added on both upstream
      and on the shadow
    * admin web access for the server doesn't require write permission for
      operations which also require admin access (bug #833)
  o Server Changes:
    * getNewSigList and getNewTroveList could return troveLists with
      duplicate entries

Changes in 1.0.8
  o Client changes:
    * Conary will now replace symlinks and regular files as long as their
      contents agree (bug #626)

  o Bug Fixes:
    * An error in the method of determining what local changes have been 
      made has been fixed.

Changes in 1.0.7:
  o Client changes:
    * A better method of determining what local changes have been made to a